--- a/Client/app/globals.css
+++ b/Client/app/globals.css
@@ -23,3 +23,15 @@
 body {
   background-color: #f9f9f9;
 }
+
+.logo {
+  font-family: "Satisfy", cursive;
+  font-weight: 600;
+  font-size: 18px;
+  cursor: pointer;
+}
+.linkdiv:active {
+  background-color: var(--active-color);
+  border-radius: 10px;
+  color: #658e68;
+}
